// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`runtime target capacity prune adapter [RT-CAP-PRUNE-007] rendered prune script keeps Docker cache and image prune explicit and filtered 1`] = `
"set +e
APPALOFT_RUNTIME_ROOT='/var/lib/appaloft/runtime'
APPALOFT_STATE_ROOT='/var/lib/appaloft/runtime/state'
APPALOFT_SOURCE_WORKSPACE_ROOT='/var/lib/appaloft/runtime/ssh-deployments'
APPALOFT_PRUNE_BEFORE='2026-01-01T00:05:00.000Z'
APPALOFT_PRUNE_CATEGORIES='docker-build-cache,unused-images'
APPALOFT_PRUNE_TARGET_FILTER=''
APPALOFT_PRUNE_DRY_RUN='1'
APPALOFT_PRUNE_ACTIVE_DEPLOYMENT_IDS=''
APPALOFT_PRUNE_ROLLBACK_DEPLOYMENT_IDS=''
APPALOFT_PRUNE_INCLUDE_ORPHAN_RUNNING='0'

if [ -z "$APPALOFT_PRUNE_CANDIDATE_LIMIT" ]; then APPALOFT_PRUNE_CANDIDATE_LIMIT=200; fi
APPALOFT_PRUNE_TMP_ROOT="$TMPDIR"
if [ -z "$APPALOFT_PRUNE_TMP_ROOT" ]; then APPALOFT_PRUNE_TMP_ROOT=/tmp; fi
APPALOFT_PRUNE_TMP="$APPALOFT_PRUNE_TMP_ROOT/appaloft-capacity-prune-$$"
APPALOFT_PRUNE_INSPECTED=0
APPALOFT_PRUNE_MATCHED=0
APPALOFT_PRUNE_PRUNED=0
APPALOFT_PRUNE_SKIPPED=0
APPALOFT_PRUNE_EXCLUDED=0
APPALOFT_PRUNE_RECLAIMABLE_BYTES=0
APPALOFT_PRUNE_REPORTED=0
cleanup_prune_tmp() { rm -f "$APPALOFT_PRUNE_TMP".*; }
trap cleanup_prune_tmp EXIT
printf 'APPALOFT_CAPACITY_PRUNE_V1\\n'
has_category() {
  case ",$APPALOFT_PRUNE_CATEGORIES," in
    *",$1,"*) return 0 ;;
    *) return 1 ;;
  esac
}
protected_deployment_reason() {
  protected_deployment_id="$1"
  case ",$APPALOFT_PRUNE_ACTIVE_DEPLOYMENT_IDS," in
    *",$protected_deployment_id,"*) printf '%s' active-runtime; return 0 ;;
  esac
  case ",$APPALOFT_PRUNE_ROLLBACK_DEPLOYMENT_IDS," in
    *",$protected_deployment_id,"*) printf '%s' rollback-candidate; return 0 ;;
  esac
  return 1
}
matches_prune_target() {
  candidate_id="$1"; candidate_target="$2"
  [ -z "$APPALOFT_PRUNE_TARGET_FILTER" ] && return 0
  [ "$candidate_id" = "$APPALOFT_PRUNE_TARGET_FILTER" ] && return 0
  [ "$candidate_target" = "$APPALOFT_PRUNE_TARGET_FILTER" ] && return 0
  return 1
}
older_than_cutoff() {
  candidate_time="$1"
  [ -n "$candidate_time" ] || return 1
  [ "$candidate_time" \\< "$APPALOFT_PRUNE_BEFORE" ]
}
emit_candidate() {
  category="$1"; id="$2"; target="$3"; updated_at="$4"; size_bytes="$5"; action="$6"; reason="$7"
  matches_prune_target "$id" "$target" || return 0
  case "$size_bytes" in ''|*[!0-9]*) normalized_size=0 ;; *) normalized_size="$size_bytes" ;; esac
  APPALOFT_PRUNE_INSPECTED=$((APPALOFT_PRUNE_INSPECTED + 1))
  case "$action" in
    matched) APPALOFT_PRUNE_MATCHED=$((APPALOFT_PRUNE_MATCHED + 1)); APPALOFT_PRUNE_RECLAIMABLE_BYTES=$((APPALOFT_PRUNE_RECLAIMABLE_BYTES + normalized_size)) ;;
    pruned) APPALOFT_PRUNE_PRUNED=$((APPALOFT_PRUNE_PRUNED + 1)); APPALOFT_PRUNE_RECLAIMABLE_BYTES=$((APPALOFT_PRUNE_RECLAIMABLE_BYTES + normalized_size)) ;;
    skipped) APPALOFT_PRUNE_SKIPPED=$((APPALOFT_PRUNE_SKIPPED + 1)) ;;
    excluded) APPALOFT_PRUNE_EXCLUDED=$((APPALOFT_PRUNE_EXCLUDED + 1)) ;;
  esac
  if [ "$APPALOFT_PRUNE_REPORTED" -lt "$APPALOFT_PRUNE_CANDIDATE_LIMIT" ]; then
    printf 'PRUNE_CANDIDATE\\t%s\\t%s\\t%s\\t%s\\t%s\\t%s\\t%s\\n' "$category" "$id" "$target" "$updated_at" "$normalized_size" "$action" "$reason"
    APPALOFT_PRUNE_REPORTED=$((APPALOFT_PRUNE_REPORTED + 1))
  fi
}
emit_prune_summary() {
  omitted=$((APPALOFT_PRUNE_INSPECTED - APPALOFT_PRUNE_REPORTED))
  printf 'PRUNE_SUMMARY\\t%s\\t%s\\t%s\\t%s\\t%s\\t%s\\t%s\\t%s\\t%s\\n' "$APPALOFT_PRUNE_INSPECTED" "$APPALOFT_PRUNE_MATCHED" "$APPALOFT_PRUNE_PRUNED" "$APPALOFT_PRUNE_SKIPPED" "$APPALOFT_PRUNE_EXCLUDED" "$APPALOFT_PRUNE_RECLAIMABLE_BYTES" "$APPALOFT_PRUNE_REPORTED" "$omitted" "$APPALOFT_PRUNE_CANDIDATE_LIMIT"
}
if has_category stopped-containers; then
  if command -v docker >/dev/null 2>&1; then
    docker ps -a --filter label=appaloft.managed=true --format '{{.ID}}\\t{{.Names}}\\t{{.Status}}' 2>/dev/null > "$APPALOFT_PRUNE_TMP.containers"
    while IFS='	' read -r cid cname cstatus; do
      [ -n "$cid" ] || continue
      ccreated=$(docker inspect -f '{{.Created}}' "$cid" 2>/dev/null)
      matches_prune_target "$cid" "$cname" || continue
      cdeployment=$(docker inspect -f '{{ index .Config.Labels "appaloft.deployment-id" }}' "$cid" 2>/dev/null)
      cresource=$(docker inspect -f '{{ index .Config.Labels "appaloft.resource-id" }}' "$cid" 2>/dev/null)
      if [ -z "$cdeployment" ] || [ "$cdeployment" = "<no value>" ] || [ -z "$cresource" ] || [ "$cresource" = "<no value>" ]; then
        emit_candidate stopped-containers "$cid" "$cname" "$ccreated" "0" skipped ownership-unproven
        continue
      fi
      protected_reason=$(protected_deployment_reason "$cdeployment")
      if [ "$?" = "0" ]; then
        emit_candidate stopped-containers "$cid" "$cname" "$ccreated" "0" skipped "$protected_reason"
        continue
      fi
      case "$cstatus" in
        Up*)
          if [ "$APPALOFT_PRUNE_INCLUDE_ORPHAN_RUNNING" = "1" ] && [ -n "$APPALOFT_PRUNE_TARGET_FILTER" ] && older_than_cutoff "$ccreated"; then
            if [ "$APPALOFT_PRUNE_DRY_RUN" = "1" ]; then
              emit_candidate stopped-containers "$cid" "$cname" "$ccreated" "0" matched ""
            else
              docker stop "$cid" >/dev/null 2>&1
              docker rm "$cid" >/dev/null 2>&1
              if [ "$?" = "0" ]; then emit_candidate stopped-containers "$cid" "$cname" "$ccreated" "0" pruned ""; else emit_candidate stopped-containers "$cid" "$cname" "$ccreated" "0" skipped safety-evidence-missing; fi
            fi
          else
            emit_candidate stopped-containers "$cid" "$cname" "$ccreated" "0" skipped active-runtime
          fi
          ;;
        *)
          if older_than_cutoff "$ccreated"; then
            if [ "$APPALOFT_PRUNE_DRY_RUN" = "1" ]; then
              emit_candidate stopped-containers "$cid" "$cname" "$ccreated" "0" matched ""
            else
              docker rm "$cid" >/dev/null 2>&1
              if [ "$?" = "0" ]; then emit_candidate stopped-containers "$cid" "$cname" "$ccreated" "0" pruned ""; else emit_candidate stopped-containers "$cid" "$cname" "$ccreated" "0" skipped safety-evidence-missing; fi
            fi
          else
            emit_candidate stopped-containers "$cid" "$cname" "$ccreated" "0" skipped cutoff-not-reached
          fi
          ;;
      esac
    done < "$APPALOFT_PRUNE_TMP.containers"
  else
    printf 'CAPACITY_WARNING\\tdocker-unavailable\\tdocker command is unavailable\\n'
  fi
fi
if has_category docker-build-cache; then
  if command -v docker >/dev/null 2>&1; then
    if ! matches_prune_target docker-build-cache docker-build-cache; then
      :
    elif [ "$APPALOFT_PRUNE_DRY_RUN" = "1" ]; then
      emit_candidate docker-build-cache docker-build-cache docker-build-cache "$APPALOFT_PRUNE_BEFORE" "0" matched ""
    else
      docker builder prune --force --filter "until=$APPALOFT_PRUNE_BEFORE" >/dev/null 2>&1
      if [ "$?" = "0" ]; then emit_candidate docker-build-cache docker-build-cache docker-build-cache "$APPALOFT_PRUNE_BEFORE" "0" pruned ""; else emit_candidate docker-build-cache docker-build-cache docker-build-cache "$APPALOFT_PRUNE_BEFORE" "0" skipped safety-evidence-missing; fi
    fi
  else
    printf 'CAPACITY_WARNING\\tdocker-unavailable\\tdocker command is unavailable\\n'
  fi
fi
if has_category unused-images; then
  if command -v docker >/dev/null 2>&1; then
    if ! matches_prune_target docker-unused-images docker-unused-images; then
      :
    elif [ "$APPALOFT_PRUNE_DRY_RUN" = "1" ]; then
      emit_candidate unused-images docker-unused-images docker-unused-images "$APPALOFT_PRUNE_BEFORE" "0" matched ""
    else
      docker image prune --force --filter "until=$APPALOFT_PRUNE_BEFORE" >/dev/null 2>&1
      if [ "$?" = "0" ]; then emit_candidate unused-images docker-unused-images docker-unused-images "$APPALOFT_PRUNE_BEFORE" "0" pruned ""; else emit_candidate unused-images docker-unused-images docker-unused-images "$APPALOFT_PRUNE_BEFORE" "0" skipped safety-evidence-missing; fi
    fi
  else
    printf 'CAPACITY_WARNING\\tdocker-unavailable\\tdocker command is unavailable\\n'
  fi
fi
if has_category preview-workspaces || has_category source-workspaces; then
  if [ -d "$APPALOFT_SOURCE_WORKSPACE_ROOT" ]; then
    find "$APPALOFT_SOURCE_WORKSPACE_ROOT" -mindepth 1 -maxdepth 1 -type d 2>/dev/null > "$APPALOFT_PRUNE_TMP.workspaces"
    while IFS= read -r workspace; do
      name=$(basename "$workspace")
      case "$workspace" in
        "$APPALOFT_STATE_ROOT"|"$APPALOFT_STATE_ROOT"/*|"$APPALOFT_RUNTIME_ROOT/state"|"$APPALOFT_RUNTIME_ROOT/state"/*)
          emit_candidate source-workspaces "$name" "$workspace" "" "0" excluded state-root-excluded
          continue
          ;;
      esac
      category=source-workspaces
      case "$name" in *preview*|prv_*|preview_*) category=preview-workspaces ;; esac
      has_category "$category" || continue
      matches_prune_target "$name" "$workspace" || continue
      updated_at=$(date -r "$workspace" -u +%Y-%m-%dT%H:%M:%S.000Z 2>/dev/null)
      size_bytes=$(du -sk "$workspace" 2>/dev/null | awk '{print $1 * 1024}')
      case "$size_bytes" in ''|*[!0-9]*) size_bytes=0 ;; esac
      if older_than_cutoff "$updated_at"; then
        if [ -e "$workspace/.appaloft-active" ]; then
          emit_candidate "$category" "$name" "$workspace" "$updated_at" "$size_bytes" skipped active-runtime
        elif [ -e "$workspace/.appaloft-rollback-candidate" ]; then
          emit_candidate "$category" "$name" "$workspace" "$updated_at" "$size_bytes" skipped rollback-candidate
        elif [ "$APPALOFT_PRUNE_DRY_RUN" = "1" ]; then
          emit_candidate "$category" "$name" "$workspace" "$updated_at" "$size_bytes" matched ""
        else
          rm -rf "$workspace"
          if [ "$?" = "0" ]; then emit_candidate "$category" "$name" "$workspace" "$updated_at" "$size_bytes" pruned ""; else emit_candidate "$category" "$name" "$workspace" "$updated_at" "$size_bytes" skipped safety-evidence-missing; fi
        fi
      else
        emit_candidate "$category" "$name" "$workspace" "$updated_at" "$size_bytes" skipped cutoff-not-reached
      fi
    done < "$APPALOFT_PRUNE_TMP.workspaces"
  fi
fi
if has_category remote-state-markers; then
  emit_remote_state_marker_candidate() {
    marker_kind="$1"; marker="$2"; delete_mode="$3"
    [ -e "$marker" ] || return 0
    marker_name=$(basename "$marker")
    marker_id="$marker_kind"_"$marker_name"
    matches_prune_target "$marker_id" "$marker" || return 0
    case "$marker" in
      "$APPALOFT_STATE_ROOT"/journals/*.json|"$APPALOFT_STATE_ROOT"/backups/*|"$APPALOFT_STATE_ROOT"/recovery/*.json|"$APPALOFT_STATE_ROOT"/locks/recovered/*) ;;
      *) emit_candidate remote-state-markers "$marker_id" "$marker" "" "0" skipped safety-evidence-missing; return 0 ;;
    esac
    updated_at=$(date -r "$marker" -u +%Y-%m-%dT%H:%M:%S.000Z 2>/dev/null)
    size_bytes=$(du -sk "$marker" 2>/dev/null | awk '{print $1 * 1024}')
    case "$size_bytes" in ''|*[!0-9]*) size_bytes=0 ;; esac
    if older_than_cutoff "$updated_at"; then
      if [ "$APPALOFT_PRUNE_DRY_RUN" = "1" ]; then
        emit_candidate remote-state-markers "$marker_id" "$marker" "$updated_at" "$size_bytes" matched ""
      else
        case "$delete_mode" in file) rm -f "$marker" ;; tree) rm -rf "$marker" ;; esac
        if [ "$?" = "0" ]; then emit_candidate remote-state-markers "$marker_id" "$marker" "$updated_at" "$size_bytes" pruned ""; else emit_candidate remote-state-markers "$marker_id" "$marker" "$updated_at" "$size_bytes" skipped safety-evidence-missing; fi
      fi
    else
      emit_candidate remote-state-markers "$marker_id" "$marker" "$updated_at" "$size_bytes" skipped cutoff-not-reached
    fi
  }
  if [ -d "$APPALOFT_STATE_ROOT" ]; then
    for marker in "$APPALOFT_STATE_ROOT"/journals/*.json; do emit_remote_state_marker_candidate journal "$marker" file; done
    for marker in "$APPALOFT_STATE_ROOT"/backups/*; do emit_remote_state_marker_candidate backup "$marker" tree; done
    for marker in "$APPALOFT_STATE_ROOT"/recovery/*.json; do emit_remote_state_marker_candidate recovery "$marker" file; done
    for marker in "$APPALOFT_STATE_ROOT"/locks/recovered/*; do emit_remote_state_marker_candidate recovered-lock "$marker" tree; done
  fi
  emit_candidate remote-state-markers state-root "$APPALOFT_STATE_ROOT" "" "0" excluded remote-state-excluded
fi
emit_candidate source-workspaces state-root "$APPALOFT_STATE_ROOT" "" "0" excluded state-root-excluded
emit_candidate source-workspaces volumes docker-volumes "" "0" excluded volume-excluded
emit_prune_summary
"
`;

exports[`runtime target capacity prune adapter [RT-CAP-PRUNE-010] rendered prune script keeps remote-state marker cleanup opt-in and state-root preserving 1`] = `
"set +e
APPALOFT_RUNTIME_ROOT='/var/lib/appaloft/runtime'
APPALOFT_STATE_ROOT='/var/lib/appaloft/runtime/state'
APPALOFT_SOURCE_WORKSPACE_ROOT='/var/lib/appaloft/runtime/ssh-deployments'
APPALOFT_PRUNE_BEFORE='2026-01-01T00:05:00.000Z'
APPALOFT_PRUNE_CATEGORIES='remote-state-markers'
APPALOFT_PRUNE_TARGET_FILTER=''
APPALOFT_PRUNE_DRY_RUN='0'
APPALOFT_PRUNE_ACTIVE_DEPLOYMENT_IDS=''
APPALOFT_PRUNE_ROLLBACK_DEPLOYMENT_IDS=''
APPALOFT_PRUNE_INCLUDE_ORPHAN_RUNNING='0'

if [ -z "$APPALOFT_PRUNE_CANDIDATE_LIMIT" ]; then APPALOFT_PRUNE_CANDIDATE_LIMIT=200; fi
APPALOFT_PRUNE_TMP_ROOT="$TMPDIR"
if [ -z "$APPALOFT_PRUNE_TMP_ROOT" ]; then APPALOFT_PRUNE_TMP_ROOT=/tmp; fi
APPALOFT_PRUNE_TMP="$APPALOFT_PRUNE_TMP_ROOT/appaloft-capacity-prune-$$"
APPALOFT_PRUNE_INSPECTED=0
APPALOFT_PRUNE_MATCHED=0
APPALOFT_PRUNE_PRUNED=0
APPALOFT_PRUNE_SKIPPED=0
APPALOFT_PRUNE_EXCLUDED=0
APPALOFT_PRUNE_RECLAIMABLE_BYTES=0
APPALOFT_PRUNE_REPORTED=0
cleanup_prune_tmp() { rm -f "$APPALOFT_PRUNE_TMP".*; }
trap cleanup_prune_tmp EXIT
printf 'APPALOFT_CAPACITY_PRUNE_V1\\n'
has_category() {
  case ",$APPALOFT_PRUNE_CATEGORIES," in
    *",$1,"*) return 0 ;;
    *) return 1 ;;
  esac
}
protected_deployment_reason() {
  protected_deployment_id="$1"
  case ",$APPALOFT_PRUNE_ACTIVE_DEPLOYMENT_IDS," in
    *",$protected_deployment_id,"*) printf '%s' active-runtime; return 0 ;;
  esac
  case ",$APPALOFT_PRUNE_ROLLBACK_DEPLOYMENT_IDS," in
    *",$protected_deployment_id,"*) printf '%s' rollback-candidate; return 0 ;;
  esac
  return 1
}
matches_prune_target() {
  candidate_id="$1"; candidate_target="$2"
  [ -z "$APPALOFT_PRUNE_TARGET_FILTER" ] && return 0
  [ "$candidate_id" = "$APPALOFT_PRUNE_TARGET_FILTER" ] && return 0
  [ "$candidate_target" = "$APPALOFT_PRUNE_TARGET_FILTER" ] && return 0
  return 1
}
older_than_cutoff() {
  candidate_time="$1"
  [ -n "$candidate_time" ] || return 1
  [ "$candidate_time" \\< "$APPALOFT_PRUNE_BEFORE" ]
}
emit_candidate() {
  category="$1"; id="$2"; target="$3"; updated_at="$4"; size_bytes="$5"; action="$6"; reason="$7"
  matches_prune_target "$id" "$target" || return 0
  case "$size_bytes" in ''|*[!0-9]*) normalized_size=0 ;; *) normalized_size="$size_bytes" ;; esac
  APPALOFT_PRUNE_INSPECTED=$((APPALOFT_PRUNE_INSPECTED + 1))
  case "$action" in
    matched) APPALOFT_PRUNE_MATCHED=$((APPALOFT_PRUNE_MATCHED + 1)); APPALOFT_PRUNE_RECLAIMABLE_BYTES=$((APPALOFT_PRUNE_RECLAIMABLE_BYTES + normalized_size)) ;;
    pruned) APPALOFT_PRUNE_PRUNED=$((APPALOFT_PRUNE_PRUNED + 1)); APPALOFT_PRUNE_RECLAIMABLE_BYTES=$((APPALOFT_PRUNE_RECLAIMABLE_BYTES + normalized_size)) ;;
    skipped) APPALOFT_PRUNE_SKIPPED=$((APPALOFT_PRUNE_SKIPPED + 1)) ;;
    excluded) APPALOFT_PRUNE_EXCLUDED=$((APPALOFT_PRUNE_EXCLUDED + 1)) ;;
  esac
  if [ "$APPALOFT_PRUNE_REPORTED" -lt "$APPALOFT_PRUNE_CANDIDATE_LIMIT" ]; then
    printf 'PRUNE_CANDIDATE\\t%s\\t%s\\t%s\\t%s\\t%s\\t%s\\t%s\\n' "$category" "$id" "$target" "$updated_at" "$normalized_size" "$action" "$reason"
    APPALOFT_PRUNE_REPORTED=$((APPALOFT_PRUNE_REPORTED + 1))
  fi
}
emit_prune_summary() {
  omitted=$((APPALOFT_PRUNE_INSPECTED - APPALOFT_PRUNE_REPORTED))
  printf 'PRUNE_SUMMARY\\t%s\\t%s\\t%s\\t%s\\t%s\\t%s\\t%s\\t%s\\t%s\\n' "$APPALOFT_PRUNE_INSPECTED" "$APPALOFT_PRUNE_MATCHED" "$APPALOFT_PRUNE_PRUNED" "$APPALOFT_PRUNE_SKIPPED" "$APPALOFT_PRUNE_EXCLUDED" "$APPALOFT_PRUNE_RECLAIMABLE_BYTES" "$APPALOFT_PRUNE_REPORTED" "$omitted" "$APPALOFT_PRUNE_CANDIDATE_LIMIT"
}
if has_category stopped-containers; then
  if command -v docker >/dev/null 2>&1; then
    docker ps -a --filter label=appaloft.managed=true --format '{{.ID}}\\t{{.Names}}\\t{{.Status}}' 2>/dev/null > "$APPALOFT_PRUNE_TMP.containers"
    while IFS='	' read -r cid cname cstatus; do
      [ -n "$cid" ] || continue
      ccreated=$(docker inspect -f '{{.Created}}' "$cid" 2>/dev/null)
      matches_prune_target "$cid" "$cname" || continue
      cdeployment=$(docker inspect -f '{{ index .Config.Labels "appaloft.deployment-id" }}' "$cid" 2>/dev/null)
      cresource=$(docker inspect -f '{{ index .Config.Labels "appaloft.resource-id" }}' "$cid" 2>/dev/null)
      if [ -z "$cdeployment" ] || [ "$cdeployment" = "<no value>" ] || [ -z "$cresource" ] || [ "$cresource" = "<no value>" ]; then
        emit_candidate stopped-containers "$cid" "$cname" "$ccreated" "0" skipped ownership-unproven
        continue
      fi
      protected_reason=$(protected_deployment_reason "$cdeployment")
      if [ "$?" = "0" ]; then
        emit_candidate stopped-containers "$cid" "$cname" "$ccreated" "0" skipped "$protected_reason"
        continue
      fi
      case "$cstatus" in
        Up*)
          if [ "$APPALOFT_PRUNE_INCLUDE_ORPHAN_RUNNING" = "1" ] && [ -n "$APPALOFT_PRUNE_TARGET_FILTER" ] && older_than_cutoff "$ccreated"; then
            if [ "$APPALOFT_PRUNE_DRY_RUN" = "1" ]; then
              emit_candidate stopped-containers "$cid" "$cname" "$ccreated" "0" matched ""
            else
              docker stop "$cid" >/dev/null 2>&1
              docker rm "$cid" >/dev/null 2>&1
              if [ "$?" = "0" ]; then emit_candidate stopped-containers "$cid" "$cname" "$ccreated" "0" pruned ""; else emit_candidate stopped-containers "$cid" "$cname" "$ccreated" "0" skipped safety-evidence-missing; fi
            fi
          else
            emit_candidate stopped-containers "$cid" "$cname" "$ccreated" "0" skipped active-runtime
          fi
          ;;
        *)
          if older_than_cutoff "$ccreated"; then
            if [ "$APPALOFT_PRUNE_DRY_RUN" = "1" ]; then
              emit_candidate stopped-containers "$cid" "$cname" "$ccreated" "0" matched ""
            else
              docker rm "$cid" >/dev/null 2>&1
              if [ "$?" = "0" ]; then emit_candidate stopped-containers "$cid" "$cname" "$ccreated" "0" pruned ""; else emit_candidate stopped-containers "$cid" "$cname" "$ccreated" "0" skipped safety-evidence-missing; fi
            fi
          else
            emit_candidate stopped-containers "$cid" "$cname" "$ccreated" "0" skipped cutoff-not-reached
          fi
          ;;
      esac
    done < "$APPALOFT_PRUNE_TMP.containers"
  else
    printf 'CAPACITY_WARNING\\tdocker-unavailable\\tdocker command is unavailable\\n'
  fi
fi
if has_category docker-build-cache; then
  if command -v docker >/dev/null 2>&1; then
    if ! matches_prune_target docker-build-cache docker-build-cache; then
      :
    elif [ "$APPALOFT_PRUNE_DRY_RUN" = "1" ]; then
      emit_candidate docker-build-cache docker-build-cache docker-build-cache "$APPALOFT_PRUNE_BEFORE" "0" matched ""
    else
      docker builder prune --force --filter "until=$APPALOFT_PRUNE_BEFORE" >/dev/null 2>&1
      if [ "$?" = "0" ]; then emit_candidate docker-build-cache docker-build-cache docker-build-cache "$APPALOFT_PRUNE_BEFORE" "0" pruned ""; else emit_candidate docker-build-cache docker-build-cache docker-build-cache "$APPALOFT_PRUNE_BEFORE" "0" skipped safety-evidence-missing; fi
    fi
  else
    printf 'CAPACITY_WARNING\\tdocker-unavailable\\tdocker command is unavailable\\n'
  fi
fi
if has_category unused-images; then
  if command -v docker >/dev/null 2>&1; then
    if ! matches_prune_target docker-unused-images docker-unused-images; then
      :
    elif [ "$APPALOFT_PRUNE_DRY_RUN" = "1" ]; then
      emit_candidate unused-images docker-unused-images docker-unused-images "$APPALOFT_PRUNE_BEFORE" "0" matched ""
    else
      docker image prune --force --filter "until=$APPALOFT_PRUNE_BEFORE" >/dev/null 2>&1
      if [ "$?" = "0" ]; then emit_candidate unused-images docker-unused-images docker-unused-images "$APPALOFT_PRUNE_BEFORE" "0" pruned ""; else emit_candidate unused-images docker-unused-images docker-unused-images "$APPALOFT_PRUNE_BEFORE" "0" skipped safety-evidence-missing; fi
    fi
  else
    printf 'CAPACITY_WARNING\\tdocker-unavailable\\tdocker command is unavailable\\n'
  fi
fi
if has_category preview-workspaces || has_category source-workspaces; then
  if [ -d "$APPALOFT_SOURCE_WORKSPACE_ROOT" ]; then
    find "$APPALOFT_SOURCE_WORKSPACE_ROOT" -mindepth 1 -maxdepth 1 -type d 2>/dev/null > "$APPALOFT_PRUNE_TMP.workspaces"
    while IFS= read -r workspace; do
      name=$(basename "$workspace")
      case "$workspace" in
        "$APPALOFT_STATE_ROOT"|"$APPALOFT_STATE_ROOT"/*|"$APPALOFT_RUNTIME_ROOT/state"|"$APPALOFT_RUNTIME_ROOT/state"/*)
          emit_candidate source-workspaces "$name" "$workspace" "" "0" excluded state-root-excluded
          continue
          ;;
      esac
      category=source-workspaces
      case "$name" in *preview*|prv_*|preview_*) category=preview-workspaces ;; esac
      has_category "$category" || continue
      matches_prune_target "$name" "$workspace" || continue
      updated_at=$(date -r "$workspace" -u +%Y-%m-%dT%H:%M:%S.000Z 2>/dev/null)
      size_bytes=$(du -sk "$workspace" 2>/dev/null | awk '{print $1 * 1024}')
      case "$size_bytes" in ''|*[!0-9]*) size_bytes=0 ;; esac
      if older_than_cutoff "$updated_at"; then
        if [ -e "$workspace/.appaloft-active" ]; then
          emit_candidate "$category" "$name" "$workspace" "$updated_at" "$size_bytes" skipped active-runtime
        elif [ -e "$workspace/.appaloft-rollback-candidate" ]; then
          emit_candidate "$category" "$name" "$workspace" "$updated_at" "$size_bytes" skipped rollback-candidate
        elif [ "$APPALOFT_PRUNE_DRY_RUN" = "1" ]; then
          emit_candidate "$category" "$name" "$workspace" "$updated_at" "$size_bytes" matched ""
        else
          rm -rf "$workspace"
          if [ "$?" = "0" ]; then emit_candidate "$category" "$name" "$workspace" "$updated_at" "$size_bytes" pruned ""; else emit_candidate "$category" "$name" "$workspace" "$updated_at" "$size_bytes" skipped safety-evidence-missing; fi
        fi
      else
        emit_candidate "$category" "$name" "$workspace" "$updated_at" "$size_bytes" skipped cutoff-not-reached
      fi
    done < "$APPALOFT_PRUNE_TMP.workspaces"
  fi
fi
if has_category remote-state-markers; then
  emit_remote_state_marker_candidate() {
    marker_kind="$1"; marker="$2"; delete_mode="$3"
    [ -e "$marker" ] || return 0
    marker_name=$(basename "$marker")
    marker_id="$marker_kind"_"$marker_name"
    matches_prune_target "$marker_id" "$marker" || return 0
    case "$marker" in
      "$APPALOFT_STATE_ROOT"/journals/*.json|"$APPALOFT_STATE_ROOT"/backups/*|"$APPALOFT_STATE_ROOT"/recovery/*.json|"$APPALOFT_STATE_ROOT"/locks/recovered/*) ;;
      *) emit_candidate remote-state-markers "$marker_id" "$marker" "" "0" skipped safety-evidence-missing; return 0 ;;
    esac
    updated_at=$(date -r "$marker" -u +%Y-%m-%dT%H:%M:%S.000Z 2>/dev/null)
    size_bytes=$(du -sk "$marker" 2>/dev/null | awk '{print $1 * 1024}')
    case "$size_bytes" in ''|*[!0-9]*) size_bytes=0 ;; esac
    if older_than_cutoff "$updated_at"; then
      if [ "$APPALOFT_PRUNE_DRY_RUN" = "1" ]; then
        emit_candidate remote-state-markers "$marker_id" "$marker" "$updated_at" "$size_bytes" matched ""
      else
        case "$delete_mode" in file) rm -f "$marker" ;; tree) rm -rf "$marker" ;; esac
        if [ "$?" = "0" ]; then emit_candidate remote-state-markers "$marker_id" "$marker" "$updated_at" "$size_bytes" pruned ""; else emit_candidate remote-state-markers "$marker_id" "$marker" "$updated_at" "$size_bytes" skipped safety-evidence-missing; fi
      fi
    else
      emit_candidate remote-state-markers "$marker_id" "$marker" "$updated_at" "$size_bytes" skipped cutoff-not-reached
    fi
  }
  if [ -d "$APPALOFT_STATE_ROOT" ]; then
    for marker in "$APPALOFT_STATE_ROOT"/journals/*.json; do emit_remote_state_marker_candidate journal "$marker" file; done
    for marker in "$APPALOFT_STATE_ROOT"/backups/*; do emit_remote_state_marker_candidate backup "$marker" tree; done
    for marker in "$APPALOFT_STATE_ROOT"/recovery/*.json; do emit_remote_state_marker_candidate recovery "$marker" file; done
    for marker in "$APPALOFT_STATE_ROOT"/locks/recovered/*; do emit_remote_state_marker_candidate recovered-lock "$marker" tree; done
  fi
  emit_candidate remote-state-markers state-root "$APPALOFT_STATE_ROOT" "" "0" excluded remote-state-excluded
fi
emit_candidate source-workspaces state-root "$APPALOFT_STATE_ROOT" "" "0" excluded state-root-excluded
emit_candidate source-workspaces volumes docker-volumes "" "0" excluded volume-excluded
emit_prune_summary
"
`;
